# unsafe_math

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
unsafe_math/: Cargo.toml
unsafe_math/benches/: bench.rs  nothing.rs
unsafe_math/src/: lib.rs
unsafe_math_macro/: Cargo.toml
unsafe_math_macro/src/: lib.rs
unsafe_math_trait/: Cargo.toml
unsafe_math_trait/src/: lib.rs
