[workspace]
members = ["unsafe_math", "unsafe_math_macro", "unsafe_math_trait"]
resolver = "3"

[workspace.package]
version = "0.1.1"
license = "MIT"
repository = "https://github.com/platonvin/unsafe_math"
edition = "2024"
readme = "README.md"

[workspace.dependencies]
unsafe_math_trait = { version = "0.1.1", path = "unsafe_math_trait" }
unsafe_math_macro = { version = "0.1.1", path = "unsafe_math_macro" }
