[package]
name = "unsafe_math"
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = ["performance", "unsafe", "math", "macro"]
description = "proc_macro to replace math operation with their unchecked/f_fast versions"

[dependencies]
unsafe_math_macro = { workspace = true, path = "../unsafe_math_macro" }
unsafe_math_trait = { workspace = true, path = "../unsafe_math_trait" }

[[bench]]
name = "bench"

[[bench]]
name = "nothing"
