[package]
name = "unsafe_math_macro"
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "unsafe_math macro"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["visit-mut", "full"] }
quote = "1"
proc-macro2 = "1"
unsafe_math_trait = { path = "../unsafe_math_trait" }
